--- a/Banking System/index.html
+++ b/Banking System/index.html
@@ -84,7 +84,7 @@
         </div>
       </div>
     </footer>
-    <!-- footer ends here -->
+    <!-- footer ends here only-->
 
     <!-- spalsh screen js -->
     <script>
